# spatialdata-integration-testing

./: .gitattributes  .gitignore  .gitmodules  README.md  envvars.sh  pushover.py  pyproject.toml  template_envvars.sh
airflow/: airflow.cfg  my_subject_template_file
airflow/dags/: datasets.py  dev_datasets.py  install_env.py  notebooks.py  orchestrators.py  repo_tests.py
airflow/utils/: install_airflow_env.sh
src/spatialdata_data_converter/: __main__.py  bash_parallel_lib.sh  config.py  dev_datasets.py  invoke_cli.sh  spatialdata_io_datasets.py  subprocess_runner.py  symlinker.py  uploader.py  utils.py  workflow_before_release.sh  workflow_first_run.sh  workflow_update_data_for_release.sh
src/spatialdata_data_converter/commands/: install_env.sh
